Bug 989403 - Invalidate inactive layer's region correctly in the presence of a resolution. r=roc

--HG--
extra : rebase_source : 899c27b493e1aabd65d512154e7ac6f345fdf6e1